<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kanal77.kanal77.Contact">

    <LinearLayout
        android:id="@+id/contact_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_title"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact_title_layout">

        <LinearLayout
            android:id="@+id/contacts_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/phone_contacts_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15sp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10sp">

                    <TextView
                        android:id="@+id/contact_phones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:text="@string/contact_phones"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_phone" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_fax" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/email_contacts_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15sp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10sp">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:text="@string/contact_email"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/official_email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:text="@string/official_email_text"
                        android:textStyle="bold"
                        tools:text="@string/official_email_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/official_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/official_email"
                        tools:text="@string/official_email" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="15sp">

                    <TextView
                        android:id="@+id/webdesc_email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:paddingTop="15sp"
                        android:text="@string/webdesc_email_text"
                        android:textStyle="bold"
                        tools:text="@string/webdesc_email_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/webdesc_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/webdesc_email"
                        tools:text="@string/webdesc_email" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="15sp">

                    <TextView
                        android:id="@+id/finance_email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:paddingTop="15sp"
                        android:text="@string/finance_email_text"
                        android:textStyle="bold"
                        tools:text="@string/finance_email_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fiannc_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finance_email"
                        tools:text="@string/finance_email" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="15sp">

                    <TextView
                        android:id="@+id/marketin_email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5sp"
                        android:paddingTop="15sp"
                        android:text="@string/marketing_email_text"
                        android:textStyle="bold"
                        tools:text="@string/marketing_email_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/marketing_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marketing_email"
                        tools:text="@string/marketing_email" />

                </TableRow>



            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
